--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
           </div>
           <div class="board--navigation__turn">
             <div class="board--navigation__turn--image">
-              <img src="./assets/icon-x.svg" alt="x">
+              <img src="./assets/icon-x-outline.svg" alt="x">
             </div>
             <h4>TURN</h4>
           </div>
           <div class="board--navigation__restart">
             <button class="btn light-white" id="restartButton" type="reset">
-              <img src="../assets/icon-restart.svg" alt="reset button"/>
+              <img src="./assets/icon-restart.svg" alt="reset button"/>
             </button>
           </div>
           
